--- a/envs/.env.template
+++ b/envs/.env.template
@@ -8,9 +8,4 @@ AWS_REGION_NAME=eu-north-1
 AWS_S3_BUCKET_NAME=
 AWS_ROUTE53_HOSTED_ZONE_ID=
 
-POSTGRES_DB=ddos_test
-POSTGRES_HOST=localhost
-POSTGRES_PORT=5432
-POSTGRES_USER=test
-POSTGRES_PASSWORD=test
-SQL_ALCHEMY_DB_URL=postgresql://test:test@localhost:5432/ddos_test
+SQL_ALCHEMY_DB_URL=sqlite:///db/ddos_shield.db
