--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -19,7 +19,7 @@ RUN --mount=type=cache,target=/root/.cache/uv \
 	PDM_BUILD_SCM_VERSION=0 uv sync --frozen --no-install-project --no-dev --no-editable
 
 COPY ./bt_ddos_shield /root/src/bt_ddos_shield
-COPY ./bin/run_shield.sh /root/src/
+COPY ./docker/entrypoint.sh /root/src/
 
 # TODO: To be removed - needed as for now because of still using MemoryBlockchainManager
 COPY ./tests /root/src/tests
@@ -36,8 +36,10 @@ WORKDIR /root/src/
 ENV PYTHONUNBUFFERED=1
 ENV PATH="/root/src/.venv/bin:$PATH"
 
+ENV SQL_ALCHEMY_DB_URL=sqlite:///db/ddos_shield.db
+
 COPY --from=build-image /root/src/ /root/src/
 
 
 
-CMD ["./run_shield.sh"]
+CMD ["./entrypoint.sh"]
