--- a/envs/.env.template
+++ b/envs/.env.template
@@ -1,14 +1,12 @@
-export MINER_HOTKEY=
-export AWS_MINER_INSTANCE_ID=
-export MINER_INSTANCE_PORT=
+MINER_HOTKEY=
+AWS_MINER_INSTANCE_ID=
+MINER_INSTANCE_PORT=
 
-export AWS_ACCESS_KEY_ID=
-export AWS_SECRET_ACCESS_KEY=
-export AWS_REGION_NAME=eu-north-1
-export AWS_S3_BUCKET_NAME=
-export AWS_ROUTE53_HOSTED_ZONE_ID=
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_REGION_NAME=eu-north-1
+AWS_S3_BUCKET_NAME=
+AWS_ROUTE53_HOSTED_ZONE_ID=
 
-# This is needed only for test_hosted_zone_id_change
-export AWS_ROUTE53_OTHER_HOSTED_ZONE_ID=
-
-export SQL_ALCHEMY_DB_URL=sqlite:///db/ddos_shield.db
+OPTIONS__AUTO_HIDE_ORIGINAL_SERVER=0
+OPTIONS__AUTO_HIDE_DELAY_SEC=1200
