--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,9 +9,9 @@ dependencies = [
     "sqlalchemy~=2.0.36",
     "route53~=1.0.1",
     "python-dotenv",
-    "pydantic>=2.10.5",
-    "pydantic-settings>=2.7.1",
-    "bittensor>=8.5.1",
+    "pydantic~=2.10.5",
+    "pydantic-settings~=2.7.1",
+    "bittensor~=8.5.1",
 ]
 
 [tool.uv]
