--- a/envs/.env.test.template
+++ b/envs/.env.test.template
@@ -1,5 +1,7 @@
 MINER_HOTKEY=
 VALIDATOR_HOTKEY=
+VALIDATOR_PRIVATE_KEY=
+VALIDATOR_PUBLIC_KEY=
 
 AWS_MINER_INSTANCE_ID=
 AWS_MINER_INSTANCE_IP=
@@ -10,6 +12,11 @@ AWS_SECRET_ACCESS_KEY=
 AWS_REGION_NAME=eu-north-1
 AWS_S3_BUCKET_NAME=
 AWS_ROUTE53_HOSTED_ZONE_ID=
+
+NETUID=
+SUBTENSOR__NETWORK=
+WALLET__NAME=
+WALLET__HOTKEY=
 
 # This is needed only for test_hosted_zone_id_change
 AWS_ROUTE53_OTHER_HOSTED_ZONE_ID=
