--- a/envs/.env.template
+++ b/envs/.env.template
@@ -8,5 +8,10 @@ AWS_REGION_NAME=eu-north-1
 AWS_S3_BUCKET_NAME=
 AWS_ROUTE53_HOSTED_ZONE_ID=
 
+NETUID=
+SUBTENSOR__NETWORK=
+WALLET__NAME=
+WALLET__HOTKEY=
+
 OPTIONS__AUTO_HIDE_ORIGINAL_SERVER=0
 OPTIONS__AUTO_HIDE_DELAY_SEC=1200
