--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,14 +4,15 @@ version = "0.1"
 requires-python = "~=3.12.3"
 
 dependencies = [
+    "bittensor~=8.5.1",
     "boto3~=1.35.27",
     "eciespy~=0.4.2",
-    "sqlalchemy~=2.0.36",
-    "route53~=1.0.1",
-    "python-dotenv",
     "pydantic~=2.10.5",
     "pydantic-settings~=2.7.1",
-    "bittensor~=8.5.1",
+    "python-dotenv",
+    "requests~=2.32.3",
+    "route53~=1.0.1",
+    "sqlalchemy~=2.0.36",
 ]
 
 [tool.uv]
