Fix running shield manually and via Docker

--- a/envs/.env.template
+++ b/envs/.env.template
@@ -1,12 +1,8 @@
-MINER_HOTKEY=
+# Shielded server details (only EC2 instance now)
 
-
-# Shielded server details
-
-# Either AWS_MINER_INSTANCE_ID or AWS_MINER_INSTANCE_IP (private
-# IP of EC2 server) should be used
+# Either AWS_MINER_INSTANCE_ID or AWS_MINER_INSTANCE_IP (private IP of EC2 server) should be used
 AWS_MINER_INSTANCE_ID=
-AWS_MINER_INSTANCE_IP=
+# AWS_MINER_INSTANCE_IP=
 
 # Port where shield should redirect traffic
 MINER_INSTANCE_PORT=
@@ -23,8 +19,9 @@ AWS_ROUTE53_HOSTED_ZONE_ID=
 
 # Bittensor credentials
 
-NETUID=
 SUBTENSOR__NETWORK=
+NETUID=
+# WALLET__PATH=
 WALLET__NAME=
 WALLET__HOTKEY=
 
