--- a/envs/.env.test.template
+++ b/envs/.env.test.template
@@ -3,8 +3,16 @@ VALIDATOR_HOTKEY=
 VALIDATOR_PRIVATE_KEY=
 VALIDATOR_PUBLIC_KEY=
 
+
+
+# Shielded server details (EC2 instance)
+
 AWS_MINER_INSTANCE_ID=
 AWS_MINER_INSTANCE_IP=
+
+
+
+# AWS credentials
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
@@ -15,7 +23,12 @@ AWS_ROUTE53_HOSTED_ZONE_ID=
 # This is needed only for test_hosted_zone_id_change
 AWS_ROUTE53_OTHER_HOSTED_ZONE_ID=
 
-NETUID=
+
+
+# Bittensor credentials
+
 SUBTENSOR__NETWORK=
+NETUID=
+# WALLET__PATH=
 WALLET__NAME=
 WALLET__HOTKEY=
