Add comments and types in BittensorValidatorsManager

--- a/envs/.env.test.template
+++ b/envs/.env.test.template
@@ -36,7 +36,7 @@ VALIDATOR_WALLET__NAME=bt_ddos_shield
 VALIDATOR_WALLET__HOTKEY=validator
 
 
-# Validator encrypting key
+# Validator encrypting key (of secp256k1 type)
 
 VALIDATOR_PRIVATE_KEY=
 VALIDATOR_PUBLIC_KEY=
