--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,10 @@ dependencies = [
     "bittensor~=8.5.1",
     "boto3~=1.35.27",
     "eciespy~=0.4.2",
+    "httpx~=0.28.1",
     "pydantic~=2.10.5",
     "pydantic-settings~=2.7.1",
     "python-dotenv~=1.0.1",
-    "requests~=2.32.3",
     "route53~=1.0.1",
     "sqlalchemy~=2.0.36",
 ]
