Generate and upload encryption certificate during ShieldMetagraph initialization

--- a/envs/.env.test.template
+++ b/envs/.env.test.template
@@ -36,7 +36,7 @@ VALIDATOR_WALLET__NAME=bt_ddos_shield
 VALIDATOR_WALLET__HOTKEY=validator
 
 
-# Validator encrypting key (of secp256k1 type)
+# Path to file with validator certificate (of secp256k1 type).
+# If file does not exist, new certificate will be generated and saved when tests are run.
 
-VALIDATOR_PRIVATE_KEY=
-VALIDATOR_PUBLIC_KEY=
+VALIDATOR_CERT_PATH=
