--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,7 +12,7 @@ on:
       - 'draft/v*'
 
 env:
-  PYTHON_DEFAULT_VERSION: "3.11"
+  PYTHON_DEFAULT_VERSION: "3.12"
 
 jobs:
   publish:
@@ -45,19 +45,25 @@ jobs:
         with:
           python-version: ${{ env.PYTHON_DEFAULT_VERSION }}
 
-      - name: Install dependencies
-        run: python -m pip install --upgrade nox 'pdm>=2.12,<3'
-
-      - name: Read the Changelog
-        id: read-changelog
-        uses: mindsers/changelog-reader-action@v2
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
         with:
-          version: ${{ steps.get-version.outputs.version }}
-          path: ./CHANGELOG.md
-        continue-on-error: ${{ fromJSON(steps.get-version.outputs.draft) }}
+          version: "latest"
+          enable-cache: true
+
+      #- name: Install dependencies
+      #  run: python -m pip install --upgrade nox
+
+      #- name: Read the Changelog
+      #  id: read-changelog
+      #  uses: mindsers/changelog-reader-action@v2
+      #  with:
+      #    version: ${{ steps.get-version.outputs.version }}
+      #    path: ./CHANGELOG.md
+      #  continue-on-error: ${{ fromJSON(steps.get-version.outputs.draft) }}
 
       - name: Build
-        run: pdm build
+        run: uv build
 
       - name: Sign distribution
         uses: sigstore/gh-action-sigstore-python@v3.0.0
@@ -71,7 +77,8 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           name: ${{ steps.get-version.outputs.version }}
-          body: ${{ steps.read-changelog.outputs.changes }}
+          #body: ${{ steps.read-changelog.outputs.changes }}
+          body: "Initial release"
           draft: ${{ fromJSON(steps.get-version.outputs.draft)}}
           prerelease: ${{ fromJSON(steps.get-version.outputs.prerelease) }}
           files: >-
