--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ dependencies = [
     "bittensor~=9.0.2",
     "boto3~=1.36.21",
     "eciespy~=0.4.2",
-    "pydantic~=2.11.0a2",
+    "pydantic~=2.10.6",
     "pydantic-settings~=2.7.1",
     "python-dotenv~=1.0.1",
     "route53~=1.0.1",
