Make tiny upgrades in env templates

--- a/envs/.env.template
+++ b/envs/.env.template
@@ -12,12 +12,12 @@ MINER_INSTANCE_PORT=
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
-AWS_REGION_NAME=eu-north-1
+AWS_REGION_NAME=
 AWS_S3_BUCKET_NAME=
 AWS_ROUTE53_HOSTED_ZONE_ID=
 
 
-# Bittensor credentials
+# Bittensor configuration
 
 SUBTENSOR__NETWORK=
 NETUID=
