--- a/envs/.env.test.template
+++ b/envs/.env.test.template
@@ -8,7 +8,7 @@ AWS_MINER_INSTANCE_IP=
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
-AWS_REGION_NAME=eu-north-1
+AWS_REGION_NAME=
 AWS_S3_BUCKET_NAME=
 AWS_ROUTE53_HOSTED_ZONE_ID=
 
@@ -16,7 +16,7 @@ AWS_ROUTE53_HOSTED_ZONE_ID=
 AWS_ROUTE53_OTHER_HOSTED_ZONE_ID=
 
 
-# Bittensor credentials
+# Bittensor configuration
 
 SUBTENSOR__NETWORK=
 NETUID=
