--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "bt-ddos-shield-client"
-requires-python = "~=3.12.3"
+requires-python = ">=3.11.0"
 dynamic = [
     "version",
 ]
