--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,8 @@ dependencies = [
 ]
 
 [tool.uv]
-prerelease = "allow"
+prerelease = "disallow"
+override-dependencies = ["bt-decode>=0.5.0a2"]
 environments = ["sys_platform == 'linux'", "sys_platform == 'darwin'"]
 
 [build-system]
