--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,8 @@ dynamic = [
 ]
 
 dependencies = [
-    "bittensor~=9.0.4",
+    "aiohttp~=3.11.14",
+    "bittensor~=9.1.0",
     "boto3~=1.36.21",
     "eciespy~=0.4.2",
     "pydantic~=2.10.6",
