Change eliptic curve algorithm from secp256k1 to ed25519 in order to support TLS

--- a/envs/.env.test.template
+++ b/envs/.env.test.template
@@ -36,7 +36,7 @@ VALIDATOR_WALLET__NAME=bt_ddos_shield
 VALIDATOR_WALLET__HOTKEY=validator
 
 
-# Path to file with validator certificate (of secp256k1 type).
+# Path to file with validator certificate (of ed25519 type).
 # If file does not exist, new certificate will be generated and saved when tests are run.
 
 VALIDATOR_CERT_PATH=
