--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dynamic = [
 dependencies = [
     "bittensor~=9.3.0",
     "boto3~=1.36.21",
+    "cryptography~=43.0.3",
     "eciespy~=0.4.6",
     "pydantic~=2.10.6",
     "pydantic-settings~=2.7.1",
