--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,6 +21,9 @@ jobs:
     permissions:
       id-token: write  # allows publishing to PyPI
       contents: write  # allows uploading a GitHub release
+    outputs:
+      draft: ${{ steps.get-version.outputs.draft }}
+      version: ${{ steps.get-version.outputs.version }}
     runs-on: ubuntu-latest
     steps:
       - name: Get version from tag
@@ -100,3 +103,29 @@ jobs:
       - name: Publish distribution 📦 to PyPI
         if: ${{ steps.get-version.outputs.draft == 'false' }}
         uses: pypa/gh-action-pypi-publish@release/v1
+
+  docker-publish:
+    runs-on: ubuntu-latest
+    needs: publish
+    if: ${{ needs.publish.outputs.draft == 'false' }}
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_KEY }}
+
+      - name: Build and push image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./docker/Dockerfile
+          push: true
+          tags: |
+            backenddevelopersltd/bt-ddos-shield-server:latest
+            backenddevelopersltd/bt-ddos-shield-server:${{ needs.publish.outputs.version }}
+            backenddevelopersltd/bt-ddos-shield-server:git-${{ github.sha }}
